# mss_ameisen

./: .$Causal_loop_Simplified.drawio.bkp  .$Stakeholder_Diagramm.drawio.bkp  Ameisen_SD_BPTK.ipynb  Causal_loop.drawio  Causal_loop_Simplified.drawio  README.md  Stakeholder_Diagramm.drawio  Systemdynamiksimulation_c4.ipynb  pyproject.toml
LE2 & LE4/: Ameisen_SD_BPTK.ipynb
LE3/: LE3.ipynb  LE3.md  ant_invasion_viz.py  ants_invasion_model.py  ants_invasion_viz.py  ants_viz.py
LE3/Old/: ants_abm_mesa.py  ants_viz.py
Notebooks/: Ameisen_SD_BPTK.ipynb
SystemModellierungen/: Causal_loop_Simplified.drawio  Systemgrenzen.docx  Systemgrenzen.md
SystemModellierungen_&_LE1/: Causal_loop_Simplified.drawio
